--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -28,11 +28,33 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h1{
+  text-align:center;
 }
+h2{
+  background:paleturquoise;
+  margin:0 auto;
+  padding:2%;
+}
+
+p{
+  margin-left:20px;
+}
+
+
+
+.card-grid{
+  margin:0px;
+  display:flex;
+  flex-wrap:wrap;
+  justify-content:flex-start;
+}
+
+.form-entry{
+  margin:1% 2%;
+}
+
+button{
+  margin:1% 2%;
+}
+
